--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Boombox</title>
+  <title>Free File Host</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <link rel="stylesheet" href="css/style.css"/>
@@ -11,7 +11,7 @@
 <body>
   <div class="card" style="width: 23rem;">
   <div class="card-body">
-    <h5 class="card-title text-header">Boombox</h5>
+    <h5 class="card-title text-header">Free File Host</h5>
     <form action="/result" method="post" enctype="multipart/form-data" id="theform">
     <div class="round" id="inputthefile">
   <input type="file" class="form-control mb-3 file-input" name="file" id="file" hidden required>
@@ -24,7 +24,6 @@
 </div>
 </form>
  <button form="theform" type="submit" class="btn btn-primary" onclick="loading()"><i class="fas fa-upload"></i> Upload</button>
-<a href="/all"><button type="submit" class="btn btn-primary">All File</button></a>
   </div>
   <div class="d-flex justify-content-center mb-3">
   <script type="text/javascript">
